get api CRUD java

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,10 +14,4 @@ code {
     monospace;
 }
 
-.app-container {
-  .add-new {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-}
+.app-container {}
